--- a/src/main/resources/plugin.xml
+++ b/src/main/resources/plugin.xml
@@ -11,12 +11,12 @@
         <extension uid="aibench.core" name="aibench.core.operation-definition"
             class="pt.uminho.ceb.biosystems.merlin.merlin_transyt.TranSyTRetriever">
             <operation-description name="TranSyT"
-                path="15@model/" uid="operations.TranSyT.ID" />
+                path="40@model/" uid="operations.TranSyT.ID" />
         </extension>
 
-       <!--  <extension uid="aibench.workbench" name="aibench.workbench.view">
-            <icon-operation operation="operations.TranSyT.ID"/>
-                icon="icons/Lyfecycle/network.png" /> 
-        </extension>-->
+       <extension uid="aibench.workbench" name="aibench.workbench.view">
+            <icon-operation operation="operations.TranSyT.ID"
+               icon="icons/Lifecycle/remote.png" />
+        </extension>
     </extensions>
 </plugin>
