--- a/src/main/resources/plugin.xml
+++ b/src/main/resources/plugin.xml
@@ -11,7 +11,7 @@
         <extension uid="aibench.core" name="aibench.core.operation-definition"
             class="pt.uminho.ceb.biosystems.merlin.merlin_transyt.TranSyTRetriever">
             <operation-description name="TranSyT"
-                path="40@model/" uid="operations.TranSyT.ID" />
+                path="30@model/10@remove/" uid="operations.TranSyT.ID" />
         </extension>
 
        <extension uid="aibench.workbench" name="aibench.workbench.view">
