--- a/src/main/resources/plugin.xml
+++ b/src/main/resources/plugin.xml
@@ -23,7 +23,7 @@
         
         <extension uid="aibench.core" name="aibench.core.operation-definition"
             class="pt.uminho.ceb.biosystems.merlin.merlin_transyt.RemoveTransporters">
-            <operation-description name="remove transport reactions"
+            <operation-description name="transport reactions"
                 path="30@model/30@remove/" uid="operations.TranSyT.ID" />
         </extension>
 
