major pom and general project refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,10 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
-		<pt.uminho.ceb.biosystems.merlin.version>4.0.1-SNAPSHOT</pt.uminho.ceb.biosystems.merlin.version>
+		<pt.uminho.ceb.biosystems.merlin.version>4.0.2-RELEASE</pt.uminho.ceb.biosystems.merlin.version>
 		<pt.uminho.ceb.biosystems.merlin.groupId>pt.uminho.ceb.biosystems.merlin</pt.uminho.ceb.biosystems.merlin.groupId>
-		<merlin.plugins.directory>${project.basedir}/../merlin-aibench/plugins</merlin.plugins.directory>
+		<merlin.plugins.directory>${project.basedir}/../merlin-project/merlin-gui/plugins</merlin.plugins.directory>
+		<merlin.plugins_bin.directory>${project.basedir}/../merlin-project/merlin-gui/plugins_bin/merlin-trasyt</merlin.plugins_bin.directory>
 		<build.name>beta</build.name>
 	</properties>
 
@@ -52,7 +53,7 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>../merlin-aibench/plugins_bin/merlin-transyt</outputDirectory>
+							<outputDirectory>${merlin.plugins_bin.directory}</outputDirectory>
 							<resources>
 								<resource>
 									<directory>target/classes</directory>
@@ -97,7 +98,7 @@
 		</dependency>
 		<dependency>
 			<groupId>pt.uminho.ceb.biosystems.merlin</groupId>
-			<artifactId>merlin-aibench</artifactId>
+			<artifactId>merlin-gui</artifactId>
 			<version>${pt.uminho.ceb.biosystems.merlin.version}</version>
 		</dependency>
 	</dependencies>
