--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>pt.uminho.ceb.biosystems.merlin</groupId>
 	<artifactId>merlin-transyt</artifactId>
-	<version>4.0.1-SNAPSHOT</version>
+	<version>4.0.2-RELEASE</version>
 	<packaging>jar</packaging>
 
 	<name>merlin-transyt</name>
